--- a/ui.frontend/angular.json
+++ b/ui.frontend/angular.json
@@ -26,7 +26,7 @@
               "src/logo512.png",
               "src/manifest.json"
             ],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -96,7 +96,7 @@
               "src/logo512.png",
               "src/manifest.json"
             ],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
