--- a/core/pom.xml
+++ b/core/pom.xml
@@ -96,6 +96,13 @@ Import-Package: javax.annotation;version=0.0.0,*
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.adobe.acs</groupId>
+            <artifactId>acs-aem-commons-bundle</artifactId>
+            <version>5.3.0</version>
+            <scope>provided</scope>
+        </dependency>
+
 
         <!-- Testing -->
         <dependency>
